# streamlit-pandas-profiling

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-ci.yml
demo/: streamlit_pandas_profiling_demo.py
example/: main.py
examples/: streamlit_pandas_profiling_demo.py
streamlit_pandas_profiling/: __init__.py  version.py
streamlit_pandas_profiling/frontend/: .env  package.json  tsconfig.json
streamlit_pandas_profiling/frontend/public/: index.html
streamlit_pandas_profiling/frontend/src/: ProfileReport.tsx  index.tsx  profile-report.tsx  react-app-env.d.ts
streamlit_ydata_profiling/: __init__.py  __version__.py
streamlit_ydata_profiling/frontend/: package.json
streamlit_ydata_profiling/frontend/src/: ProfileReport.tsx  index.tsx
