[tool.poetry]
name = "streamlit-ydata-profiling"
version = "0.2.2a0"
description = "YData Profiling component for Streamlit."
authors = ["okld"]
maintainers = ["pejmans21 <pezhmansamadi21@gmail.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pejmans21/streamlit-ydata-profiling"
include = ["streamlit_ydata_profiling/frontend/build/*"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.28.0"
watchdog = "^3.0.0"
ydata-profiling = "^4.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = []
ignore = []
line-length = 88
select = [
    "B", # flake8-bugbear
    "B9",
    "C", # flake8-comprehensions
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort
]

[tool.ruff.isort]
known-first-party = [
    "streamlit_ydata_profiling"
]
known-third-party = [
    "streamlit",
    "ydata-profiling"
]
