[metadata]
name = streamlit_pandas_profiling
version = attr: streamlit_pandas_profiling.__version__
description = Pandas Profiling component for Streamlit.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://share.streamlit.io/okld/streamlit-gallery/main?p=pandas-profiling
url = https://github.com/okld/streamlit-pandas-profiling
author = okld
license = MIT
license_file = LICENSE

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
setup_requires =
    setuptools >= 40.8.0
    wheel
install_requires =
    pandas-profiling
    streamlit >= 0.63
